Closed
Bug 1745046
Opened 4 years ago
Closed 4 years ago
netwerk/test/browser/browser_opaque_response_blocking_telemetry.js failed with socket process
Categories
(Core :: Networking: HTTP, defect, P2)
Core
Networking: HTTP
Tracking
()
RESOLVED
FIXED
97 Branch
| Tracking | Status | |
|---|---|---|
| firefox97 | --- | fixed |
People
(Reporter: kershaw, Assigned: kershaw)
References
(Blocks 1 open bug)
Details
(Whiteboard: [necko-triaged])
Attachments
(1 file)
STR:
Run this test locally.
./mach mochitest --setpref="network.http.network_access_on_socket_process.enabled=true" --headless netwerk/test/browser/browser_opaque_response_blocking_telemetry.js
The reason of this failure is that LOAD_CALL_CONTENT_SNIFFERS is added to mLoadFlag here, but in socket process, we rely on NS_HTTP_CALL_CONTENT_SNIFFER to decide whether to send data for sniffing.
| Assignee | ||
Comment 1•4 years ago
|
||
Updated•4 years ago
|
Attachment #9254411 -
Attachment description: Bug 1745046 - Use OpaqueResponseBlockedReason to decide whether to send data for sniffinf, r=#necko → Bug 1745046 - Use OpaqueResponseBlockedReason to decide whether to send data for sniffing, r=#necko
Updated•4 years ago
|
Attachment #9254411 -
Attachment description: Bug 1745046 - Use OpaqueResponseBlockedReason to decide whether to send data for sniffing, r=#necko → Bug 1745046 - Use OpaqueResponseBlockedReason to decide whether to send data for sniffinf, r=#necko
Pushed by kjang@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/827f1f336db9
Use OpaqueResponseBlockedReason to decide whether to send data for sniffinf, r=necko-reviewers,valentin
Comment 3•4 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 4 years ago
status-firefox97:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 97 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•