Bug 1745046 - Use OpaqueResponseBlockedReason to decide whether to send data for sniffinf, r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D133278