netwerk/protocol/http/OpaqueResponseUtils.h
@@ -21,11 +21,16 @@ namespace net {
 
 class nsHttpResponseHead;
 
-bool IsOpaqueSafeListedMIMEType(const nsACString& aContentType);
+enum class OpaqueResponseBlockedReason : uint32_t {
+  ALLOWED_SAFE_LISTED,
+  BLOCKED_BLOCKLISTED_NEVER_SNIFFED,
+  BLOCKED_206_AND_BLOCKLISTED,
+  BLOCKED_NOSNIFF_AND_EITHER_BLOCKLISTED_OR_TEXTPLAIN,
+  BLOCKED_SHOULD_SNIFF
+};
 
-bool IsOpaqueBlockListedMIMEType(const nsACString& aContentType);
-
-bool IsOpaqueBlockListedNeverSniffedMIMEType(const nsACString& aContentType);
+OpaqueResponseBlockedReason GetOpaqueResponseBlockedReason(
+    const nsHttpResponseHead& aResponseHead);
 
 // Returns a tuple of (rangeStart, rangeEnd, rangeTotal) from the input range
 // header string if succeed.
